--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav>
+    <nav class="sticky">
       <div class="logo">
         <img
           src="images/flying-chef-logo.png"
@@ -46,11 +46,13 @@
       need to add an id to the recipe further down. -->
         <a class="skip-to-recipe-btn" href="#">Skip to Recipe</a>
       </section>
+      <br>
       <section class="blog">
         <p>
           yet another hotel room, waiting for my next flight, but I'm making the
           most of it by whipping up one of my favorite dishes: cardamom rice.
         </p>
+        <br>
         <p>
           Now, before I get into the recipe, I want to talk a bit about the
           challenges of cooking in hotel rooms. As you can imagine, it's not
@@ -61,6 +63,7 @@
           because it smells amazing and it is fragrant enough to wake me up when I 
           accidentally pass out in the captain's chair.
         </p>
+        <br>
         <p>
           See, I come from a family of cooks. My grandmother was famous for her
           fried chicken, my mom makes the best lasagna you've ever tasted, and
@@ -69,12 +72,14 @@
           it as a challenge. How can I make a delicious, nutritious meal using
           only the ingredients and equipment I have on hand?
         </p>
+        <br>
         <p>
           That's where this recipe comes in. Cardamom rice is a simple but
           flavorful dish that I love to make when I'm craving some home-cooked
           food. It's versatile enough to pair with a wide range of proteins and
           veggies.
         </p>
+        <br>
         <ol>
           <h3>So, let's get started. Here's what you'll need:</h3>
 
@@ -86,6 +91,7 @@
           <li>2 cloves</li>
           <li>1 cinnamon stick</li>
         </ol>
+        <br>
         <p>
           Now, I know what you're thinking: how on earth can you make rice in a
           hotel room? Well, it's easier than you might think. All you need is a
@@ -93,23 +99,27 @@
           if you can't find them, you can always ask the front desk to bring
           them to your room.
         </p>
+        <br>
         <p>
           First things first: rinse the rice in a fine mesh strainer and soak it
           in water for 30 minutes. This will help to remove any excess starch
           and make the rice fluffier. Drain the rice and set it aside.
         </p>
+        <br>
         <p>
           In a medium-sized saucepan, melt the butter over medium heat. Add the
           cardamom pods, cloves, and cinnamon stick and sauté for 1-2 minutes
           until fragrant. This will help to infuse the butter with the spices
           and give the rice a delicious aroma.
         </p>
+        <br>
         <p>
           Next, add the rice to the pan and stir to coat it with the butter and
           spices. Add the water and salt and bring it to a boil. Once it's
           boiling, reduce the heat to low, cover the pan, and simmer for 18-20
           minutes until the rice is tender and the water has been absorbed.
         </p>
+        <br>
         <p>
           Now, at this point, you can serve the rice as is, or you can get
           creative and add some extra ingredients to jazz it up. Personally, I
@@ -117,6 +127,7 @@
           parsley. The almonds add a nice crunch and the parsley adds a bit of
           color and freshness.
         </p>
+        <br>
         <p>
           So there you have it, folks: cardamom rice. It's a simple but tasty
           dish that's perfect for those times when you're stuck in a hotel room
@@ -124,6 +135,7 @@
           customize it to your liking by adding different spices, nuts, or
           herbs.
         </p>
+        <br>
 
         <p>
           As for me, I'm going to enjoy my cardamom rice with some grilled
@@ -131,6 +143,7 @@
           cuisine, but it's a lot better than the fast food options that are
           usually available at airports and hotels.
         </p>
+        <br>
         <p>
           Speaking of which, I should probably talk a bit about my job as a
           pilot. I've been flying for over 20 years now, and let me tell you,
@@ -144,7 +157,7 @@
           a long day of flying. There's something so therapeutic about chopping
           vegetables or stirring a pot of soup. And when I'm in a new city, I
           love to explore the local markets and try new ingredients and flavors.
-        </p>
+        </p><br>
         <p>
           Of course, I also miss my family when I'm on the road. I have a wife
           and two kids back home, and it can be tough to be away from them for
@@ -152,6 +165,7 @@
           can, through video calls, texts, and emails. And when I'm cooking, I
           often think of them and the meals we've shared together.
         </p>
+        <br>
         <p>
           In fact, cardamom rice is a dish that my wife and I used to make
           together when we were first dating. We would spend hours in the
@@ -159,6 +173,7 @@
           now, years later, when I'm making it in a hotel room halfway across
           the country, it reminds me of those early days of our relationship.
         </p>
+        <br>
         <p>
           I know, I know, I'm getting sentimental here. But that's just the way
           I am. When I'm cooking, I tend to get a bit nostalgic and reflective.
@@ -166,6 +181,7 @@
           tradition. Or maybe it's just because I'm getting older and more
           sentimental.
         </p>
+        <br>
         <p>
           Either way, I hope you've enjoyed this little glimpse into my world as
           a pilot who loves to cook. And if you ever find yourself in a hotel
@@ -174,6 +190,7 @@
           and family.
         </p>
       </section>
+      <br>
       <section class="current-recipe">
         <section>
           <h2>Cardamom Rice Recipe</h2>
@@ -228,6 +245,7 @@
         </section>
       </section>
     </main>
+    <br>
 
     <footer>
       <p>&copy; My Recipes</p>
